--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.idea
+*.cmake-build-debug
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
